apps/canary-service/base/canary-service-v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service-v1
spec:
  selector:
    app: canary-service
    version: v1
  ports:
    - port: 8080
      targetPort: 8080
