apps/canary-service/base/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service-v2
spec:
  selector:
    app: canary-service
    version: v2
  ports:
    - port: 8080
      targetPort: 8080
